[package]
name = "vexide-embedded-graphics"
description = "embedded-graphics driver for the VEX V5 Brain"
repository = "https://github.com/vexide/vexide-embedded-graphics/"
authors = [
  "vexide",
  "Gavin Niederman <gavinniederman@gmail.com>",
  "doinkythederp <doinkythederp@icloud.com>",
  "Tropical",
]
license = "MIT"
keywords = ["vex", "vexide", "vex-robotics", "robotics", "embedded-graphics", "graphics", "bindings"]
version = "0.1.0"
edition = "2021"

[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true

[package.metadata.docs.rs]
targets = ["armv7a-none-eabi"]

[dependencies]
# TODO: also update this
vexide = { version = "0.7.0", default-features = false, features = [
  "devices",
] }
embedded-graphics-core = "0.4.0"
vex-sdk = "0.26.0"

[dev-dependencies]
vexide = "0.7.0"
embedded-graphics = "0.8.1"